tests/NormalTests/paczka1/small_fuzzy/52523489.err
Error in line 2: TfLN9z S757 42,1
Error in line 6: hKLk4fF A135 233,V
Error in line 3: BY8IM S757 69,3
Error in line 8: BY8IM S645 50,5
